<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/myCoin"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/myCoin"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/debate"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/debate_room"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/feed"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/feed"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/add_on"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/add_on"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>



</menu>